[package]
name = "rust_gpu_testing"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.14.0"
env_logger = "0.10.1"
flume = "0.11.0"
futures = "0.3.29"
png = "0.17.10"
pollster = "0.3.0"
rayon = "1.8.0"
timeit = "0.1.2"
tokio = { version = "1.34.0", features = ["full"] }
wasm-bindgen = "0.2.88"
wgpu = "0.18.0"
